--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
-    "**/node_modules": true
+    "**/node_modules": false
   },
   "editor.fontFamily": "Operator Mono Lig,Fira Code iScript, Fira Code,cascadia code"
 }
