--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
-    "**/node_modules": false
+    "**/node_modules": true
   },
   "editor.fontFamily": "Operator Mono Lig,Fira Code iScript, Fira Code,cascadia code"
 }
